project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: math-operations-service
spec:
  selector:
    app: math-operations
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
